[gd_scene load_steps=6 format=3 uid="uid://ceeakj307x55t"]

[ext_resource type="Theme" uid="uid://qbakscdd8o1p" path="res://theme/default.tres" id="1_xv7wk"]
[ext_resource type="Script" uid="uid://cnk08vde7jw8i" path="res://game/ui/hud_screen/hud_screen.gd" id="2_jaijf"]
[ext_resource type="Texture2D" uid="uid://mrtivuyhsqlt" path="res://textures/Corners.png" id="3_bcfod"]
[ext_resource type="Texture2D" uid="uid://cueqo40a5id2i" path="res://textures/targeting_tex.png" id="4_h4y40"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mhvfb"]
texture = ExtResource("3_bcfod")
modulate_color = Color(1, 0.5686275, 0, 1)

[node name="HUDScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_xv7wk")
script = ExtResource("2_jaijf")

[node name="bg" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="bg"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="bg/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_mhvfb")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/Label"]
layout_mode = 2
text = "rec"

[node name="TimerLabel" type="Label" parent="MarginContainer/MarginContainer/Label"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "00:00:00"

[node name="Label3" type="Label" parent="MarginContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Cam 01"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="BatteryLabel" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Battery: 100%"

[node name="HPLabel" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Integrity: 100%"

[node name="InventoryLabel" type="Label" parent="MarginContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="PlaceableBox" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
alignment = 1

[node name="Reticle" type="Control" parent="."]
unique_name_in_owner = true
self_modulate = Color(1, 0.5686275, 0, 1)
anchors_preset = 0
mouse_filter = 2

[node name="Reticle" type="TextureRect" parent="Reticle"]
self_modulate = Color(1, 0.5686275, 0, 1)
custom_minimum_size = Vector2(48, 48)
layout_mode = 0
offset_left = -24.0
offset_top = -24.0
offset_right = 24.0
offset_bottom = 24.0
mouse_filter = 2
texture = ExtResource("4_h4y40")
